# wingpanel-indicator-a11y

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  meson.build
.github/workflows/: main.yml
data/: a11y.appdata.xml.in  a11y.metainfo.xml.in  io.elementary.desktop.wingpanel.a11y.gschema.xml  meson.build
debian/: changelog  control  copyright
po/: POTFILES  a11y-indicator.pot  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+165 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+164 more)
src/: CMakeLists.txt  GreeterWidget.vala  Indicator.vala  SessionSettings.vala  SessionWidget.vala  config.vala.in  meson.build
